# server/src/DTOs/booking.dto.ts
@@ -1,0 +1,5 @@
+export interface bookingDTO{
+    start_time:string,
+    end_time:string,
+    date:string
+}
